--- a/Ap 15 node js/Node-js-Practice/package.json
+++ b/Ap 15 node js/Node-js-Practice/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "data-fns": "^1.1.0",
     "date-fns": "^3.6.0",
+    "formidable": "^3.5.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.13",
+    "url": "^0.11.3",
     "uuid": "^9.0.1"
   }
 }
